--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,12 @@ license = "MIT/Apache-2.0"
 keywords = ["Valhalla", "OpenStreetMap", "routing"]
 
 [dependencies]
-cxx = "1.0"
 autocxx = "0.11"
+cxx = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [build-dependencies]
+autocxx-build = "0.11"
 cmake = "0.1"
 cxx-build = "1.0"
-autocxx-build = "0.11"
