--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,19 +3,23 @@ name = "valhalla"
 version = "3.1.3+rs.1"
 authors = ["Elias Wilken <elias@wlkn.io>"]
 edition = "2018"
-description = "Rust wrapper for the Valhalla routing engine"
+description = "Rust wrapper around the Valhalla routing engine"
 readme = "README.md"
 repository = "https://github.com/ewilken/valhalla-rs"
 license = "MIT/Apache-2.0"
 keywords = ["Valhalla", "OpenStreetMap", "routing"]
 
 [dependencies]
+anyhow = "1.0"
 autocxx = "0.11"
 cxx = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tonic = "0.5"
+prost = "0.8"
 
 [build-dependencies]
 autocxx-build = "0.11"
 cmake = "0.1"
 cxx-build = "1.0"
+tonic-build = "0.5"
