--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,17 @@ keywords = ["Valhalla", "OpenStreetMap", "routing"]
 
 [dependencies]
 anyhow = "1.0"
-autocxx = "0.11"
-cxx = "1.0"
+autocxx = { path = "/home/chargery/code/autocxx", version = "0.13.0" }
+cc = "1.0.71"
+cxx = "1.0.51"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tonic = "0.5"
 prost = "0.8"
 
 [build-dependencies]
-autocxx-build = "0.11"
-cmake = "0.1"
+cc = "1.0.71"
+autocxx-build = { path = "/home/chargery/code/autocxx/gen/build", version = "0.13.0" }
+cmake = "0.1.46"
 cxx-build = "1.0"
 tonic-build = "0.5"
