--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["Valhalla", "OpenStreetMap", "routing"]
 
 [dependencies]
 anyhow = "1.0.45"
-autocxx = { path = "/Users/philippscheff/work/code/autocxx", version = "0.13.0" }
+autocxx = { git = "https://github.com/google/autocxx.git", version = "0.13.0" }
 cc = "1.0.71"
 cxx = "1.0.51"
 serde = { version = "1.0", features = ["derive"] }
@@ -22,7 +22,7 @@ prost = "0.8"
 [build-dependencies]
 anyhow = "1.0.45"
 cc = "1.0.71"
-autocxx-build = { path = "/Users/philippscheff/work/code/autocxx/gen/build", version = "0.13.0" }
+autocxx-build = { git = "https://github.com/google/autocxx.git", version = "0.13.0" }
 cmake = "0.1.46"
 cxx-build = "1.0"
 tonic-build = "0.5"
