--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ keywords = ["Valhalla", "OpenStreetMap", "routing"]
 
 [dependencies]
 anyhow = "1.0"
-autocxx = { git = "https://github.com/google/autocxx.git", version = "0.15" }
+autocxx = "0.16"
 cc = "1.0"
 cxx = "1.0"
 serde = { version = "1.0.130", features = ["derive"] }
@@ -24,11 +24,12 @@ serde_json = "1.0"
 serde_repr = "0.1"
 prost = "0.9"
 
+# optional
 async-graphql = { version = "3.0", optional = true }
 
 [build-dependencies]
 anyhow = "1.0"
-autocxx-build = { git = "https://github.com/google/autocxx.git", version = "0.15" }
+autocxx-build = "0.16"
 cc = "1.0"
 cmake = "0.1"
 cxx-build = "1.0"
